--- a/GitWatch/Base.lproj/Main.storyboard
+++ b/GitWatch/Base.lproj/Main.storyboard
@@ -310,7 +310,7 @@
                                     <action selector="OnLogin_Click:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ihC-Y9-Zqr"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="halidoucse@gmail.com" borderStyle="roundedRect" placeholder="username" textAlignment="natural" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="6U2-77-7AP">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="username" textAlignment="natural" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="6U2-77-7AP">
                                 <rect key="frame" x="20" y="296" width="560" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="gIr-Pr-1XC"/>
@@ -386,7 +386,7 @@
                                     </mask>
                                 </variation>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="250" misplaced="YES" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pyh-eM-5bn">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="250" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pyh-eM-5bn">
                                 <rect key="frame" x="128" y="114" width="196" height="16"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="196" id="ezT-EQ-U8o"/>
@@ -413,7 +413,7 @@
                                 </variation>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="open issues" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8yh-dA-QqA">
-                                <rect key="frame" x="527" y="110" width="53" height="13"/>
+                                <rect key="frame" x="489" y="89" width="53" height="13"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="53" id="3y4-za-ach"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="53" id="PlU-vX-cGf"/>
@@ -455,42 +455,102 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Update 3 hrs ago by Halid Cisse" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qxz-RR-9Qx">
+                                <rect key="frame" x="354" y="151" width="226" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="226" id="g9j-Si-G0l"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zOu-iJ-10o">
+                                <rect key="frame" x="550" y="114" width="30" height="30"/>
+                                <color key="backgroundColor" red="0.94891980229999995" green="0.94891980229999995" blue="0.94891980229999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="JKN-Uy-vUo"/>
+                                    <constraint firstAttribute="width" constant="30" id="gwb-mI-6IZ"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="30" id="jDS-Ez-D38"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <color key="textColor" red="0.93855628189999996" green="0.38354478600000003" blue="0.40391924099999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="jDS-Ez-D38"/>
+                                    </mask>
+                                </variation>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="open pull request" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nQ2-rI-soQ">
+                                <rect key="frame" x="472" y="130" width="70" height="13"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="13" id="22X-Vf-ilJ"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="53" id="TIk-w0-IfW"/>
+                                    <constraint firstAttribute="width" constant="70" id="UV9-pO-3TT"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-UltraLight" family="Helvetica Neue" pointSize="10"/>
+                                <color key="textColor" red="0.93855628189999996" green="0.38354478600000003" blue="0.40391924099999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="TIk-w0-IfW"/>
+                                    </mask>
+                                </variation>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="qxz-RR-9Qx" firstAttribute="top" secondItem="zOu-iJ-10o" secondAttribute="bottom" constant="7" id="0cx-Tf-6ds"/>
+                            <constraint firstItem="qxz-RR-9Qx" firstAttribute="bottom" secondItem="ZWK-sc-Zfq" secondAttribute="bottom" id="0ff-cW-j8G"/>
                             <constraint firstItem="dCe-5g-y5E" firstAttribute="trailing" secondItem="8yh-dA-QqA" secondAttribute="trailing" id="1x5-31-Z6S"/>
                             <constraint firstItem="8yh-dA-QqA" firstAttribute="leading" secondItem="Pyh-eM-5bn" secondAttribute="trailing" constant="28" id="35j-aP-1ZK"/>
                             <constraint firstItem="sJC-1P-WCN" firstAttribute="top" secondItem="8yh-dA-QqA" secondAttribute="bottom" constant="477" id="7jy-xU-dd1"/>
                             <constraint firstItem="UTD-QA-Xfl" firstAttribute="firstBaseline" secondItem="QBi-oR-u79" secondAttribute="baseline" constant="-2" id="856-6m-lKN"/>
+                            <constraint firstItem="nQ2-rI-soQ" firstAttribute="top" secondItem="zOu-iJ-10o" secondAttribute="bottom" constant="-22" id="8yG-XB-r8j"/>
+                            <constraint firstItem="nQ2-rI-soQ" firstAttribute="top" secondItem="8yh-dA-QqA" secondAttribute="bottom" constant="28" id="9fY-kJ-B85"/>
+                            <constraint firstItem="zOu-iJ-10o" firstAttribute="top" secondItem="UTD-QA-Xfl" secondAttribute="bottom" constant="-97" id="9oQ-Em-eSS"/>
                             <constraint firstItem="ZWK-sc-Zfq" firstAttribute="top" secondItem="dCe-5g-y5E" secondAttribute="top" id="AG3-bI-pSI"/>
                             <constraint firstItem="dCe-5g-y5E" firstAttribute="top" secondItem="eDb-t0-09t" secondAttribute="top" id="Dpd-tP-xiP"/>
                             <constraint firstItem="UTD-QA-Xfl" firstAttribute="top" secondItem="ZWK-sc-Zfq" secondAttribute="bottom" constant="23" id="Efh-tZ-DHB"/>
+                            <constraint firstItem="qxz-RR-9Qx" firstAttribute="top" secondItem="nQ2-rI-soQ" secondAttribute="bottom" constant="8" symbolic="YES" id="Ex2-PJ-RSt"/>
+                            <constraint firstItem="zOu-iJ-10o" firstAttribute="leading" secondItem="eDb-t0-09t" secondAttribute="leading" id="F7i-SW-8ia"/>
                             <constraint firstItem="sJC-1P-WCN" firstAttribute="top" secondItem="ZWK-sc-Zfq" secondAttribute="bottom" constant="428" id="Hz0-I4-BDc"/>
                             <constraint firstItem="ZWK-sc-Zfq" firstAttribute="centerY" secondItem="Pyh-eM-5bn" secondAttribute="centerY" id="JGk-AZ-Vb1"/>
                             <constraint firstItem="dCe-5g-y5E" firstAttribute="leading" secondItem="Pyh-eM-5bn" secondAttribute="leading" id="Jie-tv-ikf"/>
                             <constraint firstItem="eDb-t0-09t" firstAttribute="trailing" secondItem="8yh-dA-QqA" secondAttribute="trailing" id="Jqi-8E-Mif"/>
                             <constraint firstItem="QBi-oR-u79" firstAttribute="leading" secondItem="UTD-QA-Xfl" secondAttribute="trailing" constant="47" id="Kk2-WJ-pxU"/>
+                            <constraint firstItem="8yh-dA-QqA" firstAttribute="bottom" secondItem="eDb-t0-09t" secondAttribute="bottom" id="Kzi-lY-gVR"/>
+                            <constraint firstItem="nQ2-rI-soQ" firstAttribute="leading" secondItem="ZWK-sc-Zfq" secondAttribute="leading" constant="452" id="LpK-r2-c1P"/>
+                            <constraint firstItem="nQ2-rI-soQ" firstAttribute="leading" secondItem="UTD-QA-Xfl" secondAttribute="leading" constant="452" id="MSx-5C-HnG"/>
                             <constraint firstItem="ZWK-sc-Zfq" firstAttribute="leading" secondItem="9G2-pr-aiS" secondAttribute="leadingMargin" id="RDr-SW-lf7"/>
                             <constraint firstItem="8yh-dA-QqA" firstAttribute="top" secondItem="eDb-t0-09t" secondAttribute="bottom" constant="8" id="TWM-gm-QAf"/>
                             <constraint firstItem="ZWK-sc-Zfq" firstAttribute="top" secondItem="I7V-N0-sIu" secondAttribute="bottom" constant="8" symbolic="YES" id="U16-UH-vnQ"/>
+                            <constraint firstItem="zOu-iJ-10o" firstAttribute="leading" secondItem="nQ2-rI-soQ" secondAttribute="trailing" constant="8" symbolic="YES" id="U8o-Jv-Ije"/>
                             <constraint firstItem="Pyh-eM-5bn" firstAttribute="top" secondItem="dCe-5g-y5E" secondAttribute="bottom" constant="21" id="UF6-Ik-cdt"/>
                             <constraint firstItem="Q5K-Uz-h7n" firstAttribute="baseline" secondItem="QBi-oR-u79" secondAttribute="firstBaseline" constant="-7" id="UgV-ye-axv"/>
                             <constraint firstItem="sJC-1P-WCN" firstAttribute="top" secondItem="Pyh-eM-5bn" secondAttribute="bottom" constant="470" id="WdN-Dw-BKx"/>
                             <constraint firstItem="QBi-oR-u79" firstAttribute="leading" secondItem="Q5K-Uz-h7n" secondAttribute="trailing" constant="8" symbolic="YES" id="XWh-ys-lUI"/>
+                            <constraint firstItem="qxz-RR-9Qx" firstAttribute="top" secondItem="8yh-dA-QqA" secondAttribute="bottom" constant="28" id="aEz-sY-y2I"/>
                             <constraint firstItem="sJC-1P-WCN" firstAttribute="top" secondItem="eDb-t0-09t" secondAttribute="bottom" constant="498" id="aHL-Qt-a5q"/>
                             <constraint firstItem="8yh-dA-QqA" firstAttribute="top" secondItem="dCe-5g-y5E" secondAttribute="bottom" constant="8" symbolic="YES" id="brs-wI-BqM"/>
                             <constraint firstItem="UTD-QA-Xfl" firstAttribute="firstBaseline" secondItem="Q5K-Uz-h7n" secondAttribute="baseline" id="cgA-Tb-vHA"/>
                             <constraint firstItem="eDb-t0-09t" firstAttribute="trailing" secondItem="9G2-pr-aiS" secondAttribute="trailingMargin" id="d1G-KF-b8g"/>
                             <constraint firstItem="sJC-1P-WCN" firstAttribute="top" secondItem="ZWK-sc-Zfq" secondAttribute="bottom" constant="428" id="fC2-Sg-cJz"/>
+                            <constraint firstItem="zOu-iJ-10o" firstAttribute="centerY" secondItem="nQ2-rI-soQ" secondAttribute="centerY" constant="-7.5" id="fJT-Lv-L1r"/>
                             <constraint firstItem="Q5K-Uz-h7n" firstAttribute="baseline" secondItem="UTD-QA-Xfl" secondAttribute="firstBaseline" constant="-6" id="fLu-qK-KU1"/>
                             <constraint firstItem="dCe-5g-y5E" firstAttribute="leading" secondItem="ZWK-sc-Zfq" secondAttribute="trailing" constant="8" symbolic="YES" id="fl5-7j-BH6"/>
                             <constraint firstItem="eDb-t0-09t" firstAttribute="leading" secondItem="Pyh-eM-5bn" secondAttribute="trailing" constant="51" id="jH2-15-pXW"/>
+                            <constraint firstItem="nQ2-rI-soQ" firstAttribute="top" secondItem="8yh-dA-QqA" secondAttribute="bottom" constant="28" id="jIo-iR-2cQ"/>
                             <constraint firstItem="8yh-dA-QqA" firstAttribute="top" secondItem="eDb-t0-09t" secondAttribute="bottom" constant="8" symbolic="YES" id="kDy-dl-jem"/>
+                            <constraint firstItem="zOu-iJ-10o" firstAttribute="leading" secondItem="nQ2-rI-soQ" secondAttribute="trailing" constant="8" symbolic="YES" id="kIl-Ir-W4e"/>
                             <constraint firstAttribute="trailingMargin" secondItem="dCe-5g-y5E" secondAttribute="trailing" constant="10" id="llM-Bd-BIb"/>
+                            <constraint firstItem="eDb-t0-09t" firstAttribute="leading" secondItem="8yh-dA-QqA" secondAttribute="trailing" constant="8" id="oPg-1Q-bDA"/>
+                            <constraint firstItem="qxz-RR-9Qx" firstAttribute="trailing" secondItem="8yh-dA-QqA" secondAttribute="trailing" id="paq-Kg-946"/>
                             <constraint firstItem="8yh-dA-QqA" firstAttribute="top" secondItem="dCe-5g-y5E" secondAttribute="bottom" constant="17" id="qeE-IM-cR1"/>
                             <constraint firstItem="eDb-t0-09t" firstAttribute="trailing" secondItem="dCe-5g-y5E" secondAttribute="trailing" id="rCA-Y9-W85"/>
                             <constraint firstItem="8yh-dA-QqA" firstAttribute="trailing" secondItem="9G2-pr-aiS" secondAttribute="trailingMargin" id="rDZ-Zb-BGO"/>
                             <constraint firstItem="8yh-dA-QqA" firstAttribute="leading" secondItem="Pyh-eM-5bn" secondAttribute="trailing" constant="74" id="wQ1-Pe-032"/>
+                            <constraint firstItem="zOu-iJ-10o" firstAttribute="top" secondItem="Pyh-eM-5bn" secondAttribute="top" id="xkS-iO-zNL"/>
                             <constraint firstItem="Pyh-eM-5bn" firstAttribute="bottom" secondItem="8yh-dA-QqA" secondAttribute="bottom" id="yfd-4n-uj2"/>
                         </constraints>
                         <variation key="default">
@@ -499,14 +559,25 @@
                                 <exclude reference="UF6-Ik-cdt"/>
                                 <exclude reference="yfd-4n-uj2"/>
                                 <exclude reference="cgA-Tb-vHA"/>
+                                <exclude reference="aEz-sY-y2I"/>
+                                <exclude reference="paq-Kg-946"/>
+                                <exclude reference="8yG-XB-r8j"/>
+                                <exclude reference="9fY-kJ-B85"/>
+                                <exclude reference="LpK-r2-c1P"/>
+                                <exclude reference="MSx-5C-HnG"/>
                                 <exclude reference="35j-aP-1ZK"/>
                                 <exclude reference="TWM-gm-QAf"/>
                                 <exclude reference="brs-wI-BqM"/>
+                                <exclude reference="kDy-dl-jem"/>
                                 <exclude reference="qeE-IM-cR1"/>
+                                <exclude reference="rDZ-Zb-BGO"/>
                                 <exclude reference="wQ1-Pe-032"/>
                                 <exclude reference="Jqi-8E-Mif"/>
                                 <exclude reference="jH2-15-pXW"/>
                                 <exclude reference="rCA-Y9-W85"/>
+                                <exclude reference="9oQ-Em-eSS"/>
+                                <exclude reference="fJT-Lv-L1r"/>
+                                <exclude reference="kIl-Ir-W4e"/>
                                 <exclude reference="7jy-xU-dd1"/>
                                 <exclude reference="Hz0-I4-BDc"/>
                                 <exclude reference="WdN-Dw-BKx"/>
@@ -518,6 +589,8 @@
                     <connections>
                         <outlet property="DaysInterval" destination="Q5K-Uz-h7n" id="Taw-ht-hxr"/>
                         <outlet property="IssuesLabel" destination="eDb-t0-09t" id="nO0-hr-aUC"/>
+                        <outlet property="LastUpdated" destination="qxz-RR-9Qx" id="CQr-Rn-BHw"/>
+                        <outlet property="OpenPullRequest" destination="zOu-iJ-10o" id="45a-Og-aKb"/>
                         <outlet property="RepoDescription" destination="Pyh-eM-5bn" id="uoj-0r-eju"/>
                         <outlet property="RepoIcon" destination="ZWK-sc-Zfq" id="7kI-Ud-Xga"/>
                         <outlet property="RepoName" destination="dCe-5g-y5E" id="lzS-gd-sis"/>
